@startuml

class Recipe

class Ingredient

class User

class UserGroup

class Group

class GroupRecipe

class Favorite

Recipe "1" -- "many" Ingredient

User "many" -- "1" Recipe

User "many" -- "many" Recipe
(User, Recipe) .. Favorite

User "many" -- "many" Recipe
(User, Recipe) .. Review

Group "many" -- "many" User
(User, Group) .. UserGroup

Group "many" -- "many" Recipe
(Recipe, Group) .. GroupRecipe


@enduml